First version for cases

--- a/App/app/src/main/res/values/strings.xml
+++ b/App/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">DigitalWardrobe</string>
+
+    <string-array name="names">
+        <item>Sports (Outdoor)</item>
+        <item>University</item>
+        <item>Business</item>
+    </string-array>
+
 </resources>
